--- a/SecureDriveSystem/app/src/main/res/layout/activity_main.xml
+++ b/SecureDriveSystem/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,12 @@
         android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:text="İlk Uyarı Mesafesi:"
-        android:layout_marginTop="89dp"
         android:layout_marginLeft="37dp"
+        android:layout_marginStart="37dp"
+        android:layout_marginTop="89dp"
+        android:text="İlk Uyarı Mesafesi:"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detectText"
-        android:layout_marginStart="37dp" />
+        app:layout_constraintTop_toBottomOf="@+id/detectText" />
 
     <EditText
         android:id="@+id/distanceEditText"
